Fixes some broken links on the campaign and teacher show pages.

--- a/app/views/master/campaigns/show.html.haml
+++ b/app/views/master/campaigns/show.html.haml
@@ -4,7 +4,7 @@
   %h3.sub-title.inline
     = @campaign.name
     %span
-      = link_to campaigns_path(@campaign), class: 'btn btn-default btn-xs', title: "Back to All Campaigns" do
+      = link_to campaigns_path, class: 'btn btn-default btn-xs', title: "Back to All Campaigns" do
         %span.glyphicon.glyphicon-arrow-left
 
 %ul.nav.nav-tabs
