--- a/app/views/master/teachers/show.html.haml
+++ b/app/views/master/teachers/show.html.haml
@@ -49,6 +49,9 @@
           %th= Teacher.human_attribute_name(:prestigious_name)
           %td= @teacher.prestigious_name
         %tr
+          %th= Teacher.human_attribute_name(:school)
+          %td= link_to @teacher.school.name, [@teacher.school.district, @teacher.school]
+        %tr
           %th= Teacher.human_attribute_name(:created_at)
           %td= l(@teacher.created_at, format: :short)
         %tr
