--- a/app/views/layouts/master/_navbar.html.haml
+++ b/app/views/layouts/master/_navbar.html.haml
@@ -69,7 +69,7 @@
               %span.glyphicon.glyphicon-fire
               Campaigns
           %li
-            = link_to '#' do
+            = link_to indiegogo_imports_path do
               %span.glyphicon.glyphicon-import
               Import Indiegogo Data
           %li.divider
