Fleshes out more of the indiegogo CSV Data Import. #9.

--- a/app/views/master/contributions/index.html.haml
+++ b/app/views/master/contributions/index.html.haml
@@ -10,20 +10,19 @@
 %table.table.table-striped.table-hover.table-condensed
   %thead
     %tr
-      %th= sorty "pledge_id", Contribution.human_attribute_name(:pledge_id), true
-      %th= sorty "pledged_at", Contribution.human_attribute_name(:pledged_at)
+      %th= sorty "amount_cents", Contribution.human_attribute_name(:amount)
       %th= sorty "contributor", Contribution.human_attribute_name(:contributor)
       %th= sorty "campaign", Contribution.human_attribute_name(:campaign)
-      %th= sorty "amount_cents", Contribution.human_attribute_name(:amount)
-      %th= sorty "created_at", Contribution.human_attribute_name(:created_at)
-      %th= sorty "updated_at", Contribution.human_attribute_name(:updated_at)
+      %th= sorty "pledge_id", Contribution.human_attribute_name(:pledge_id), {default: true}
+      %th= sorty "pledged_at", Contribution.human_attribute_name(:pledged_at)
+      %th= Contribution.human_attribute_name(:impression_token)
+      %th= sorty "imported_at", Contribution.human_attribute_name(:imported_at)
       %th
       %th
   %tbody
     - @contributions.each do |contribution|
       %tr
-        %td= link_to contribution.pledge_id, contribution
-        %td= l(contribution.pledged_at, format: :short)
+        %td= link_to(humanized_money_with_symbol(contribution.amount.dollars, no_cents_if_whole: false), contribution)
         %td
           - if contribution.contributor.present?
             = link_to contribution.contributor.name, contribution.contributor
@@ -34,9 +33,10 @@
             = link_to contribution.campaign.name, contribution.campaign
           - else
             N/A
-        %td= link_to(humanized_money_with_symbol(contribution.amount.dollars, no_cents_if_whole: false), contribution)
-        %td= l(contribution.created_at, format: :short)
-        %td= l(contribution.updated_at, format: :short)
+        %td= link_to contribution.pledge_id, contribution
+        %td= l(contribution.pledged_at, format: :short)
+        %td= contribution.impression_token
+        %td= l(contribution.imported_at, format: :short)
         %td
           = link_to edit_contribution_path(contribution), class: 'btn btn-warning btn-xs', title: 'Edit Contribution' do
             %span.glyphicon.glyphicon-edit
