--- a/app/views/master/campaigns/show.html.haml
+++ b/app/views/master/campaigns/show.html.haml
@@ -15,11 +15,11 @@
   %li
     = link_to '#contributions', data: {toggle: 'tab'} do
       %span.glyphicon.glyphicon-shopping-cart
-      Contributions
+      Contributions (#{@contributions.total_count})
   %li
     = link_to campaign_impressions_path(@campaign.to_param) do
       %span.glyphicon.glyphicon-map-marker
-      Impressions
+      Impressions (#{@impressions.total_count})
 
 .tab-content
   #general.tab-pane.active
@@ -103,14 +103,18 @@
     %table.table.table-striped.table-hover.table-condensed
       %thead
         %tr
-          %th= Contribution.human_attribute_name(:pledge_id)
           %th= Contribution.human_attribute_name(:amount)
           %th= Contribution.human_attribute_name(:contributor)
+          %th= Contribution.human_attribute_name(:pledge_id)
           %th= Contribution.human_attribute_name(:pledged_at)
+          %th= Contribution.human_attribute_name(:impression_token)
+          %th= Contribution.human_attribute_name(:imported_at)
       %tbody
         - @contributions.each do |contribution|
           %tr
-            %td= link_to contribution.pledge_id, contribution
             %td= humanized_money_with_symbol(contribution.amount.dollars, no_cents_if_whole: false)
             %td= link_to contribution.contributor.name, contribution.contributor
+            %td= link_to contribution.pledge_id, contribution
             %td= l(contribution.pledged_at, format: :short)
+            %td= contribution.impression_token
+            %td= l(contribution.imported_at, format: :short)
