--- a/app/views/master/products/index.html.haml
+++ b/app/views/master/products/index.html.haml
@@ -10,7 +10,7 @@
 %table.table.table-striped.table-hover.table-condensed
   %thead
     %tr
-      %th= sorty "name", Product.human_attribute_name(:name), true
+      %th= sorty "name", Product.human_attribute_name(:name), {default: true}
       %th= sorty "price_cents", Product.human_attribute_name(:price)
       %th= sorty "created_at", Product.human_attribute_name(:created_at)
       %th= sorty "updated_at", Product.human_attribute_name(:updated_at)
