--- a/app/views/master/schools/index.html.haml
+++ b/app/views/master/schools/index.html.haml
@@ -31,7 +31,7 @@
 %table.table.table-striped.table-hover.table-condensed
   %thead
     %tr
-      %th= sorty "name", School.human_attribute_name(:name), true
+      %th= sorty "name", School.human_attribute_name(:name), {default: true}
       %th= sorty "created_at", School.human_attribute_name(:created_at)
       %th= sorty "updated_at", School.human_attribute_name(:updated_at)
       %th
