--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -19,13 +19,13 @@
             = f.button :submit, 'Contribute', class: 'btn btn-primary'
 
     .col-lg-6.c-graphs
-      = image_tag(Gchart.pie_3d(data: [0,100], slice_colors: '00d6ea,cfd0d0', title: 'Goal vs. Raised', size: '400x200', labels: ['Raised', 'Goal']))
+      = image_tag(Gchart.pie_3d(data: [@campaign.contributions_total(dollars: false), @campaign.goal_amount.cents], slice_colors: '00d6ea,cfd0d0', title: 'Goal vs. Raised', size: '400x200', labels: ['Raised', 'Goal']))
 
 .container.funds
   .row
     .c-funds
       .c-funds-goal Goal: #{humanized_money_with_symbol(@campaign.goal_amount.dollars, no_cents_if_whole: false)}
-      .c-funds-raised Raised: $0
+      .c-funds-raised Raised: #{humanized_money_with_symbol(@campaign.contributions_total(dollars: true), no_cents_if_whole: false)}
 
 = social_share_button_tag(@campaign.name, url: @campaign.sharing_link)
 
@@ -33,7 +33,7 @@
   .row
     .col-lg-6
       :plain
-        <img src="https://images.indiegogo.com/file_attachments/674131/files/20140625065839-01-meet-lumos-title.png?1403704719">      
+        <img src="https://images.indiegogo.com/file_attachments/674131/files/20140625065839-01-meet-lumos-title.png?1403704719">
         <p>We understand that today’s classroom presents a unique challenge, with technology ranging from decades old projectors to highly sophisticated tablets and computers. Not to mention a confusing mass of wires and lack of simple connectivity between devices. That in itself presents a dilemma. Incorporating technology separated by decades of innovation can be frustratingly time consuming for even the most tech savvy teacher. Time most teachers just don’t have.</p>
     .col-lg-6
       :plain
