Adds the Pending Impressions report. #44.

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -36,3 +36,7 @@ form.form-inline.inline-search-form {
 .tab-content > .active {
   margin-top: 1em;
 }
+
+h3.text-center.dashboard-box-title {
+  line-height: 1.3em;
+}
