--- a/app/views/master/impressions/show.html.haml
+++ b/app/views/master/impressions/show.html.haml
@@ -1,16 +1,44 @@
-- title "Impression"
+- title "Impression : #{@impression.email}", false
 
-= link_to 'Edit', edit_campaign_impression_path(@impression.campaign, @impression)
+.page-header
+  %h3.sub-title.inline
+    Impression : #{@impression.email}
+    %span
+      = link_to pending_impressions_reports_path(anchor: 'general'), class: 'btn btn-default btn-xs', title: "All Pending Impressions" do
+        %span.glyphicon.glyphicon-arrow-left
 
-%p
-  %b Campaign:
-  = link_to @impression.campaign.name, @impression.campaign
-%p
-  %b Email:
-  = mail_to @impression.email
-%p
-  %b Referral kind:
-  = @impression.referral_kind
-%p
-  %b Token:
-  = @impression.token
+%ul.nav.nav-tabs
+  %li.active
+    = link_to '#general', data: {toggle: 'tab'} do
+      %span.glyphicon.glyphicon-file
+      General
+
+.tab-content
+  #general.tab-pane.active
+    %table.table.table-hover.table-striped.table-condensed
+      %tbody
+        %tr
+          %th= Impression.human_attribute_name(:campaign)
+          %td= link_to @impression.campaign.name, @impression.campaign
+        %tr
+          %th= Impression.human_attribute_name(:token)
+          %td= @impression.token
+        %tr
+          %th= Impression.human_attribute_name(:email)
+          %td= mail_to @impression.email
+        %tr
+          %th= Impression.human_attribute_name(:referral_kind)
+          %td= @impression.referral_kind
+        %tr
+          %th= Impression.human_attribute_name(:created_at)
+          %td= l(@impression.created_at, format: :short)
+        %tr
+          %th= Impression.human_attribute_name(:updated_at)
+          %td= l(@impression.updated_at, format: :short)
+        %tr
+          %th Actions
+          %td
+            %span
+              = link_to edit_campaign_impression_path(@impression.campaign, @impression), class: 'btn btn-warning btn-xs', title: "Edit Impression" do
+                %span.glyphicon.glyphicon-edit
+                Edit
