--- a/app/views/master/reports/pending_impressions.html.haml
+++ b/app/views/master/reports/pending_impressions.html.haml
@@ -1,1 +1,32 @@
 - title "Pending Impressions"
+
+%ul.nav.nav-tabs
+  %li.active
+    = link_to '#general', data: {toggle: 'tab'} do
+      %span.glyphicon.glyphicon-map-marker
+      Impressions (#{@impressions.total_count})
+
+.tab-content
+  #general.tab-pane.active
+    = paginate @impressions
+
+    %table.table.table-striped.table-hover.table-condensed
+      %thead
+        %tr
+          %th= Impression.human_attribute_name(:campaign)
+          %th= Impression.human_attribute_name(:token)
+          %th= Impression.human_attribute_name(:email)
+          %th= Impression.human_attribute_name(:referral_kind)
+          %th= Impression.human_attribute_name(:created_at)
+          %th= Impression.human_attribute_name(:updated_at)
+      %tbody
+        - @impressions.each do |impression|
+          %tr
+            %td= link_to impression.campaign.name, impression.campaign
+            %td= link_to impression.token, [impression.campaign, impression]
+            %td= mail_to impression.email
+            %td= impression.referral_kind
+            %td= l(impression.created_at, format: :short)
+            %td= l(impression.updated_at, format: :short)
+
+    = paginate @impressions
