Checks for pledged_at and imported_at before localization. #48.

--- a/app/views/campaigns/contributions.html.haml
+++ b/app/views/campaigns/contributions.html.haml
@@ -24,6 +24,10 @@
             = contribution.contributor.name
           - else
             N/A
-        %td= l(contribution.pledged_at, format: :short)
+        %td
+          - if contribution.pledged_at.present?
+            = l(contribution.pledged_at, format: :short)
+          - else
+            N/A
 
 = paginate @contributions
