--- a/app/views/master/teachers/show.html.haml
+++ b/app/views/master/teachers/show.html.haml
@@ -94,7 +94,11 @@
             %td= link_to contribution.pledge_id, contribution
             %td= humanized_money_with_symbol(contribution.amount.dollars, no_cents_if_whole: false)
             %td= link_to contribution.contributor.name, contribution.contributor
-            %td= l(contribution.pledged_at, format: :short)
+            %td
+              - if contribution.pledged_at.present?
+                = l(contribution.pledged_at, format: :short)
+              - else
+                N/A
 
 .modal.fade#newCampaignModal
   .modal-dialog
