--- a/app/views/master/reports/index.html.haml
+++ b/app/views/master/reports/index.html.haml
@@ -8,3 +8,12 @@
         Pending Impressions
       .dashboard-box-content
         Lists all pending impressions.
+
+.col-lg-4
+  .well.dashboard-box
+    %h3.text-center.dashboard-box-title
+      = link_to campaign_requests_path do
+        %span.glyphicon.glyphicon-fire
+        Campaign Requests
+      .dashboard-box-content
+        Shows requested campaigns.
