Fleshes out the convert Campaign Request process. #41.

--- a/app/views/master/campaign_requests/show.html.haml
+++ b/app/views/master/campaign_requests/show.html.haml
@@ -52,3 +52,6 @@
               = link_to edit_campaign_request_path(@campaign_request), class: 'btn btn-warning btn-xs', title: "Edit Campaign Request" do
                 %span.glyphicon.glyphicon-edit
                 Edit
+              = link_to convert_campaign_request_path(@campaign_request), class: 'btn btn-primary btn-xs', title: "Convert Campaign Request" do
+                %span.glyphicon.glyphicon-retweet
+                Convert
