--- a/app/views/master/campaign_requests/convert.html.haml
+++ b/app/views/master/campaign_requests/convert.html.haml
@@ -15,6 +15,7 @@
   = f.input :state_id, as: :select, collection: State.ordered, include_blank: 'Select State'
   = f.input :school_wide, as: :select, include_blank: false
   = f.input :email
+  = f.association :product, include_blank: false, collection: Product.all.map { |k| [k.pretty_name, k.id] }
 
   -# Choose an existing District, School, or Teacher
   %h4.page-header Manual Override
@@ -27,8 +28,14 @@
   %h4.page-header Use Existing
   = f.input :district_name, label: 'District Name'
   = f.input :school_name, label: 'School Name'
-  = f.input :teacher_name, label: 'Teacher Name'
+  = f.input :teacher_first_name, label: 'Teacher First Name'
+  = f.input :teacher_last_name, label: 'Teacher Last Name'
   = f.input :campaign_name, label: 'Campaign Name'
+  = f.input :physical_address
+  = f.input :physical_address_ext
+  = f.input :physical_city
+  = f.input :physical_state
+  = f.input :physical_postal_code
 
   .form-group
     .col-sm-offset-2.col-sm-10
