--- a/app/views/master/campaign_requests/index.html.haml
+++ b/app/views/master/campaign_requests/index.html.haml
@@ -10,7 +10,8 @@
       %th= CampaignRequest.human_attribute_name(:state)
       %th= CampaignRequest.human_attribute_name(:district_name)
       %th= CampaignRequest.human_attribute_name(:school_name)
-      %th= CampaignRequest.human_attribute_name(:teacher_name)
+      %th= CampaignRequest.human_attribute_name(:teacher_first_name)
+      %th= CampaignRequest.human_attribute_name(:teacher_last_name)
       %th= CampaignRequest.human_attribute_name(:school_wide)
       %th
       %th
@@ -23,7 +24,8 @@
         %td= link_to campaign_request.state.name, campaign_request.state
         %td= campaign_request.district_name
         %td= campaign_request.school_name
-        %td= campaign_request.teacher_name
+        %td= campaign_request.teacher_first_name
+        %td= campaign_request.teacher_last_name
         %td= campaign_request.school_wide? ? 'Yes' : 'No'
         %td
           = link_to edit_campaign_request_path(campaign_request), class: 'btn btn-warning btn-xs', title: 'Edit Campaign Request' do
