--- a/app/views/master/campaigns/show.html.haml
+++ b/app/views/master/campaigns/show.html.haml
@@ -49,7 +49,7 @@
         %tr
           %th= Campaign.human_attribute_name(:slug)
           %td
-            = link_to landing_campaign_url(@campaign.to_param, subdomain: 'landing'), class: 'btn btn-link', title: 'View Public Campaign' do
+            = link_to landing_campaign_url(@campaign.to_param, subdomain: 'landing'), target: '_blank', class: 'btn btn-link', title: 'View Public Campaign' do
               = @campaign.slug
               %span.glyphicon.glyphicon-share-alt
           %th= Campaign.human_attribute_name(:state)
